# serializer version: 1
# name: test_every_error_uses_the_shared_json_shape[/crash]
  dict({
    'body': dict({
      'error': dict({
        'code': 'internal_error',
        'details': None,
        'message': 'An unexpected error occurred.',
      }),
    }),
    'status_code': 500,
  })
# ---
# name: test_every_error_uses_the_shared_json_shape[/domain-error]
  dict({
    'body': dict({
      'error': dict({
        'code': 'domain_error',
        'details': None,
        'message': 'Business rule broken.',
      }),
    }),
    'status_code': 422,
  })
# ---
# name: test_every_error_uses_the_shared_json_shape[/not-found]
  dict({
    'body': dict({
      'error': dict({
        'code': 'not_found',
        'details': None,
        'message': 'Podcast 42 was not found.',
      }),
    }),
    'status_code': 404,
  })
# ---
# name: test_every_error_uses_the_shared_json_shape[/typed?page=abc]
  dict({
    'body': dict({
      'error': dict({
        'code': 'validation_error',
        'details': list([
          dict({
            'loc': list([
              'query',
              'page',
            ]),
            'msg': 'Input should be a valid integer, unable to parse string as an integer',
            'type': 'int_parsing',
          }),
        ]),
        'message': 'Invalid request.',
      }),
    }),
    'status_code': 422,
  })
# ---
# name: test_every_error_uses_the_shared_json_shape[/unknown-route]
  dict({
    'body': dict({
      'error': dict({
        'code': 'not_found',
        'details': None,
        'message': 'Not Found',
      }),
    }),
    'status_code': 404,
  })
# ---
